# SpotMicroESP32-Leika

./: .gitignore  .gitmodules  CMakeLists.txt  FILESYSTEM_CHUNKED_TRANSFER.md  FILESYSTEM_IMPLEMENTATION_COMPLETE.md  FILESYSTEM_INTEGRATION_SUMMARY.md  FILESYSTEM_QUICK_START.md  FILESYSTEM_SVELTE_MIGRATION.md  LICENSE.md  changelog.md  compile_proto_TEMP  kinematics.ipynb  platformio.ini  readme.md  sdkconfig.defaults  sdkconfig.esp32-wroom-camera
app/: .env  .env.embedded  .env.mock_embedded  .env.mock_web  .env.web  .eslintrc.cjs  .eslintrc.json  .prettierrc  README.md  env.d.ts  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite-plugin-littlefs.ts  vite.config.ts  vitest.config.ts
app2/: package.json  pnpm-lock.yaml  postcss.config.js  svelte.config.js  tailwind.config.js  vite.config.ts
boards/: esp32p4_dev.json
config/: no_oat.csv
data/: index.html  script.js
docs/: 1_components.md  2_assembly.md  3_software.md  4_configuring.md  5_running.md  6_developing.md  7_contributing.md  Electronic connections.canvas  Getting started.md  api.md  getting_started.md  kinematics.md  motion_system.md  readme.md  robot_build.md  software_description.md  spot.md  websocket.md
esp32/: .clang-format  .gitignore  (+6 more)
esp32/src/: ActuatorStateService.cpp  ActuatorStateService.h  AsyncJpegStream.cpp  CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h  ap_service.cpp  camera.cpp  deviceconfig.cpp  event_socket.cpp  features.cpp  filesystem.cpp  filesystem_ws.cpp  firmware_download_service.cpp  firmware_upload_service.cpp  idf_component.yml  jsonserializer.cpp  main.cpp  mdns_service.cpp  model.h  motion.cpp  movement.cpp  network.cpp  spot.cpp  system_service.cpp  webserver.cpp  wifi_service.cpp  www_mount.cpp
esp32/src/adapters/: bluetooth.cpp  websocket.cpp
esp32/src/communication/: native_server.cpp  native_websocket.cpp  webserver.cpp  websocket.cpp  websocket_adapter.cpp
esp32/src/event_bus/: event_bus.cpp  event_types.cpp
esp32/src/peripherals/: camera_service.cpp  peripherals.cpp  servo_controller.cpp
esp32/src/platform_shared/: rest_message.pb.c  rest_message.pb.h  websocket_message.pb.c  websocket_message.pb.h
esp32/src/services/: feature_service.cpp  filesystem_service.cpp  led_service.cpp  system_service.cpp
esp32/src/services/camera/: camera_service.cpp
esp32/src/services/ntp/: ntp_service.cpp
esp32/src/services/wifi/: ap_service.cpp  wifi_service.cpp
esp32/src/utils/: http_utils.cpp  websocket_server.cpp
esp32/src/wifi/: wifi_idf.cpp
platform_shared/TEMP_C_EXAMPLE/: CMakeLists.txt  main.c
platform_shared/TEMP_C_EXAMPLE/platform_shared/: example.pb.c  example.pb.h
simulation/: .gitignore  play.py  play_kinematics.py  pyproject.toml  requirements.txt  run_simulation.py  run_standalone_sim.py  simulator.py  spot.py  test.py  train.py
simulation/GymEnvs/: heightfield.py  spot_bezier_env.py  spot_env_randomizer.py  spot_gym_env.py
simulation/entities/: spot.py
simulation/pybullet_data/: spot.urdf
simulation/resources/: spot.urdf
simulation/sensors/: camera.py  hardware_interface.py
simulation/simulation/: environment.py  gui.py  kinematic.py  robot.py
simulation/src/: controllers.py
simulation/src/envs/: quadruped_env.py
simulation/src/resources/: __init__.py
simulation/src/resources/stl/: backpart.stl
simulation/src/robot/: gait.py  kinematics.py
simulation/src/utils/: gui.py  xacro.py
simulation/training/: model.py  trainer.py
(+812 files in other folders)
